# MSysInfo

./: CMakeLists.txt  README.md
src/: MMachineInfo.cpp  MMachineInfo.h  MStdLib.cpp  MStdLib.h  MString.cpp  MString.h  MWinShellInfo.cpp  MWinShellInfo.h  TAutoPtr.cpp  TAutoPtr.h  TVector.cpp  TVector.h  codecheck  main.cpp
